# ezuq

./: .gitignore  LICENSE  README.md  environment.yaml  meta.yaml  pyproject.toml
.github/workflows/: python-package.yml
examples/00_uncorrelated_ethane/: ct2rmg_rxn.pickle  kinetic_covariance_matrix.npy  local_uncertainty.py  monte_carlo.py  morris_screening.py  sensitivity.py  sobol.py  thermo_covariance_matrix.npy  unreduced_monte_carlo.py  unreduced_sobol.py
examples/01_correlated_ethane/: chem_annotated.inp  chem_annotated.yaml  corr_truncate_monte_carlo.py  corr_truncate_sobol.py  local_uncertainty.py  morris_screening.py  morris_screening_uncorr_truncate.py  species_dictionary.txt  uncorr_truncate_monte_carlo.py  uncorr_truncate_sobol.py  unreduced_monte_carlo.py  unreduced_sobol.py
examples/ethane/: chem_annotated.inp  chem_annotated.yaml  ct2rmg_rxn.pickle  input.py  sensitivity.py  species_dictionary.txt
examples/ethane/solver/: sensitivity_1_SPC_22.csv
ezuq/: monte_carlo.py  morris_screen.py  sobol.py  util.py
ezuq/simulation/: jsr.py
scripts/: morris_transform_test.py  sobol_kucherenko_2012.py
scripts/SLURM/: run_monte_carlo.sh  run_morris.sh  run_sobol.sh
src/ezuq/: morris_screen.py  util.py
src/ezuq/simulation/: jsr.py
tests/: test_monte_carlo.py
