[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezuq"
version = "0.1.0"
description = "Put error bars on your microkinetic model"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
]

[project.urls]
Repository = "https://github.com/comocheng/ezuq"
Issues = "https://github.com/comocheng/ezuq/issues"

[tool.pycodestyle]
max-line-length = 99
exclude = [".git", "__pycache__", "build", "dist"]

[tool.hatch.build.targets.wheel]
packages = ["ezuq"]

